package convert

import (
	rfmsv5 "github.com/way-platform/rfms-go/proto/gen/go/wayplatform/connect/rfms/v5"
)

// TellTaleType converts an rFMS tell tale type to proto.
func TellTaleType(input string) rfmsv5.TellTale_Type {
	switch input {
	case "COOLING_AIR_CONDITIONING":
		return rfmsv5.TellTale_COOLING_AIR_CONDITIONING
	case "HIGH_BEAM_MAIN_BEAM":
		return rfmsv5.TellTale_HIGH_BEAM_MAIN_BEAM
	case "LOW_BEAM_DIPPED_BEAM":
		return rfmsv5.TellTale_LOW_BEAM_DIPPED_BEAM
	case "TURN_SIGNALS":
		return rfmsv5.TellTale_TURN_SIGNALS
	case "HAZARD_WARNING":
		return rfmsv5.TellTale_HAZARD_WARNING
	case "PROVISIONING_HANDICAPPED_PERSON":
		return rfmsv5.TellTale_PROVISIONING_HANDICAPPED_PERSON
	case "PARKING_BRAKE":
		return rfmsv5.TellTale_PARKING_BRAKE
	case "BRAKE_MALFUNCTION":
		return rfmsv5.TellTale_BRAKE_MALFUNCTION
	case "HATCH_OPEN":
		return rfmsv5.TellTale_HATCH_OPEN
	case "FUEL_LEVEL":
		return rfmsv5.TellTale_FUEL_LEVEL
	case "ENGINE_COOLANT_TEMPERATURE":
		return rfmsv5.TellTale_ENGINE_COOLANT_TEMPERATURE
	case "BATTERY_CHARGING_CONDITION":
		return rfmsv5.TellTale_BATTERY_CHARGING_CONDITION
	case "ENGINE_OIL":
		return rfmsv5.TellTale_ENGINE_OIL
	case "POSITION_LIGHTS":
		return rfmsv5.TellTale_POSITION_LIGHTS
	case "FRONT_FOG_LIGHT":
		return rfmsv5.TellTale_FRONT_FOG_LIGHT
	case "REAR_FOG_LIGHT":
		return rfmsv5.TellTale_REAR_FOG_LIGHT
	case "PARKING_HEATER":
		return rfmsv5.TellTale_PARKING_HEATER
	case "ENGINE_MIL_INDICATOR":
		return rfmsv5.TellTale_ENGINE_MIL_INDICATOR
	case "SERVICE_CALL_FOR_MAINTENANCE":
		return rfmsv5.TellTale_SERVICE_CALL_FOR_MAINTENANCE
	case "TRANSMISSION_FLUID_TEMPERATURE":
		return rfmsv5.TellTale_TRANSMISSION_FLUID_TEMPERATURE
	case "TRANSMISSION_MALFUNCTION":
		return rfmsv5.TellTale_TRANSMISSION_MALFUNCTION
	case "ANTI_LOCK_BRAKE_FAILURE":
		return rfmsv5.TellTale_ANTI_LOCK_BRAKE_FAILURE
	case "WORN_BRAKE_LININGS":
		return rfmsv5.TellTale_WORN_BRAKE_LININGS
	case "WINDSCREEN_WASHER_FLUID":
		return rfmsv5.TellTale_WINDSCREEN_WASHER_FLUID
	case "TIRE_MALFUNCTION":
		return rfmsv5.TellTale_TIRE_MALFUNCTION
	case "GENERAL_FAILURE":
		return rfmsv5.TellTale_GENERAL_FAILURE
	case "ENGINE_OIL_TEMPERATURE":
		return rfmsv5.TellTale_ENGINE_OIL_TEMPERATURE
	case "ENGINE_OIL_LEVEL":
		return rfmsv5.TellTale_ENGINE_OIL_LEVEL
	case "ENGINE_COOLANT_LEVEL":
		return rfmsv5.TellTale_ENGINE_COOLANT_LEVEL
	case "STEERING_FLUID_LEVEL":
		return rfmsv5.TellTale_STEERING_FLUID_LEVEL
	case "STEERING_FAILURE":
		return rfmsv5.TellTale_STEERING_FAILURE
	case "HEIGHT_CONTROL":
		return rfmsv5.TellTale_HEIGHT_CONTROL
	case "RETARDER":
		return rfmsv5.TellTale_RETARDER
	case "ENGINE_EMISSION_FAILURE":
		return rfmsv5.TellTale_ENGINE_EMISSION_FAILURE
	case "ESC_INDICATOR":
		return rfmsv5.TellTale_ESC_INDICATOR
	case "BRAKE_LIGHTS":
		return rfmsv5.TellTale_BRAKE_LIGHTS
	case "ARTICULATION":
		return rfmsv5.TellTale_ARTICULATION
	case "STOP_REQUEST":
		return rfmsv5.TellTale_STOP_REQUEST
	case "BUS_STOP_BRAKE":
		return rfmsv5.TellTale_BUS_STOP_BRAKE
	case "ADBLUE_LEVEL":
		return rfmsv5.TellTale_ADBLUE_LEVEL
	case "RAISING":
		return rfmsv5.TellTale_RAISING
	case "LOWERING":
		return rfmsv5.TellTale_LOWERING
	case "KNEELING":
		return rfmsv5.TellTale_KNEELING
	case "ENGINE_COMPARTMENT_TEMPERATURE":
		return rfmsv5.TellTale_ENGINE_COMPARTMENT_TEMPERATURE
	case "AUXILLARY_AIR_PRESSURE":
		return rfmsv5.TellTale_AUXILLARY_AIR_PRESSURE
	case "AIR_FILTER_CLOGGED":
		return rfmsv5.TellTale_AIR_FILTER_CLOGGED
	case "FUEL_FILTER_DIFF_PRESSURE":
		return rfmsv5.TellTale_FUEL_FILTER_DIFF_PRESSURE
	case "SEAT_BELT":
		return rfmsv5.TellTale_SEAT_BELT
	case "EBS":
		return rfmsv5.TellTale_EBS
	case "LANE_DEPARTURE_INDICATOR":
		return rfmsv5.TellTale_LANE_DEPARTURE_INDICATOR
	case "ADVANCED_EMERGENCY_BRAKING":
		return rfmsv5.TellTale_ADVANCED_EMERGENCY_BRAKING
	case "ACC":
		return rfmsv5.TellTale_ACC
	case "TRAILER_CONNECTED":
		return rfmsv5.TellTale_TRAILER_CONNECTED
	case "ABS_TRAILER":
		return rfmsv5.TellTale_ABS_TRAILER
	case "AIRBAG":
		return rfmsv5.TellTale_AIRBAG
	case "EBS_TRAILER_1_2":
		return rfmsv5.TellTale_EBS_TRAILER_1_2
	case "TACHOGRAPH_INDICATOR":
		return rfmsv5.TellTale_TACHOGRAPH_INDICATOR
	case "ESC_SWITCHED_OFF":
		return rfmsv5.TellTale_ESC_SWITCHED_OFF
	case "LANE_DEPARTURE_WARNING_SWITCHED_OFF":
		return rfmsv5.TellTale_LANE_DEPARTURE_WARNING_SWITCHED_OFF
	case "ENGINE_EMISSION_FILTER_SOOT_FILTER":
		return rfmsv5.TellTale_ENGINE_EMISSION_FILTER_SOOT_FILTER
	case "ELECTRIC_MOTOR_FAILURES":
		return rfmsv5.TellTale_ELECTRIC_MOTOR_FAILURES
	case "ADBLUE_TAMPERING":
		return rfmsv5.TellTale_ADBLUE_TAMPERING
	case "MULTIPLEX_SYSTEM":
		return rfmsv5.TellTale_MULTIPLEX_SYSTEM
	case "BATTERY_PACK":
		return rfmsv5.TellTale_BATTERY_PACK
	case "HIGH_VOLTAGE_SYSTEM_CAUTION":
		return rfmsv5.TellTale_HIGH_VOLTAGE_SYSTEM_CAUTION
	case "BATTERY_PACK_TEMPERATURE":
		return rfmsv5.TellTale_BATTERY_PACK_TEMPERATURE
	case "LIMITED_PERFORMANCE_ELECTRIC_MOTOR":
		return rfmsv5.TellTale_LIMITED_PERFORMANCE_ELECTRIC_MOTOR
	case "BATTERY_PACK_COOLING":
		return rfmsv5.TellTale_BATTERY_PACK_COOLING
	case "WATER_IN_FUEL_INDICATOR":
		return rfmsv5.TellTale_WATER_IN_FUEL_INDICATOR
	case "OEM_SPECIFIC_TELL_TALE":
		return rfmsv5.TellTale_OEM_SPECIFIC
	default:
		return rfmsv5.TellTale_TYPE_UNKNOWN
	}
}
